--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
             border: 1px dashed #ccc;
             border-radius: 8px;
             z-index: 0;
+            filter: blur(3px);
         }
 
         #final-reveal {
