--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Save the Date - Puzzle</title>
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
     <style>
-        /* --- RESET & BASE --- */
         * {
             box-sizing: border-box;
             user-select: none;
@@ -30,7 +29,6 @@
             position: relative;
         }
 
-        /* --- ARRIÈRE-PLAN --- */
         #background-container {
             position: fixed;
             bottom: 0;
@@ -50,7 +48,6 @@
             height: auto; 
         }
 
-        /* --- UI ELEMENTS --- */
         #game-ui {
             text-align: center;
             margin-top: 20px;
@@ -76,7 +73,6 @@
             color: #dfa668;
         }
 
-        /* --- PUZZLE CONTAINER --- */
         #puzzle-container {
             position: relative;
             z-index: 50; 
@@ -98,10 +94,7 @@
 
         #puzzle-guide {
             position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
+            top: 0; left: 0; width: 100%; height: 100%;
             background-size: 100% 100%;
             opacity: 0.15;
             border: 1px dashed #ccc;
@@ -111,10 +104,7 @@
 
         #final-reveal {
             position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
+            top: 0; left: 0; width: 100%; height: 100%;
             background-size: 100% 100%;
             opacity: 0;
             z-index: 150; 
@@ -123,7 +113,6 @@
             border-radius: 8px;
         }
 
-        /* --- PIECES --- */
         .piece {
             position: absolute;
             cursor: grab;
@@ -146,7 +135,6 @@
             pointer-events: none;
         }
 
-        /* --- SUCCESS STATE --- */
         #success-message {
             position: fixed;
             bottom: -200px;
@@ -211,7 +199,6 @@
             rows: 3,
             cols: 4,
             snapThresholdPercent: 12,
-            // Légèrement augmenté pour compenser la finesse des nouvelles oreilles
             tabSizeFactor: 0.22, 
             maxSafeWidth: 1600 
         };
@@ -297,7 +284,7 @@
             ctx.beginPath();
             ctx.moveTo(startX, startY);
 
-            // Côtés (0: haut, 1: droite, 2: bas, 3: gauche)
+            // Haut, Droite, Bas, Gauche
             if (shape[0] !== 0) drawCurve(ctx, startX, startY, startX + w, startY, shape[0] * tabSize);
             else ctx.lineTo(startX + w, startY);
 
@@ -329,45 +316,51 @@
             pieces.push(canvas);
         }
 
-        // --- LOGIQUE DE COURBE "OVALE ÉTROIT" ---
+        /**
+         * FONCTION DE COURBE CORRIGÉE
+         * Assure une symétrie parfaite entre les tenons et les mortaises.
+         */
         function drawCurve(ctx, x1, y1, x2, y2, size) {
-            const cx = (x1 + x2) / 2;
-            const cy = (y1 + y2) / 2;
             const dist = Math.hypot(x2 - x1, y2 - y1);
             const ux = (x2 - x1) / dist;
             const uy = (y2 - y1) / dist;
-            const nx = -uy;
+            const nx = -uy; // Normale
             const ny = ux;
 
-            // Paramètres ajustés pour un ovale étroit
-            const neckWidth = 0.10; // Base légèrement plus large pour soutenir l'ovale
-            // C'est ici que la largeur est réduite drastiquement (0.08 au lieu de 0.20)
-            const headSpread = 0.08; 
-            // Facteur d'allongement vers la pointe pour créer l'ovale
-            const elongation = 0.45; 
+            // Paramètres de l'ovale étroit
+            const neck = 0.10;      // Largeur du cou
+            const spread = 0.08;    // Largeur de l'ovale
+            const height = 0.45;    // Élongation
 
-            const pBase1 = { x: x1 + ux * dist * (0.5 - neckWidth), y: y1 + uy * dist * (0.5 - neckWidth) };
-            const pBase2 = { x: x1 + ux * dist * (0.5 + neckWidth), y: y1 + uy * dist * (0.5 + neckWidth) };
-            const pTip = { x: cx + nx * size, y: cy + ny * size };
+            // Points de base
+            const b1x = x1 + ux * dist * (0.5 - neck);
+            const b1y = y1 + uy * dist * (0.5 - neck);
+            const b2x = x1 + ux * dist * (0.5 + neck);
+            const b2y = y1 + uy * dist * (0.5 + neck);
+            
+            // Sommet
+            const tx = x1 + ux * dist * 0.5 + nx * size;
+            const ty = y1 + uy * dist * 0.5 + ny * size;
 
-            ctx.lineTo(pBase1.x, pBase1.y);
+            ctx.lineTo(b1x, b1y);
 
-            // Courbe montante (étroite et allongée)
+            // Courbe Montante
+            // On utilise size pour que les points de contrôle s'inversent parfaitement
             ctx.bezierCurveTo(
-                pBase1.x + nx * size * elongation - ux * dist * headSpread, 
-                pBase1.y + ny * size * elongation - uy * dist * headSpread,
-                pTip.x - ux * dist * (headSpread * 0.5), 
-                pTip.y - uy * dist * (headSpread * 0.5),
-                pTip.x, pTip.y
+                b1x + nx * size * height - ux * dist * spread,
+                b1y + ny * size * height - uy * dist * spread,
+                tx - ux * dist * spread,
+                ty,
+                tx, ty
             );
 
-            // Courbe descendante (symétrique)
+            // Courbe Descendante
             ctx.bezierCurveTo(
-                pTip.x + ux * dist * (headSpread * 0.5), 
-                pTip.y + uy * dist * (headSpread * 0.5),
-                pBase2.x + nx * size * elongation + ux * dist * headSpread, 
-                pBase2.y + ny * size * elongation + uy * dist * headSpread,
-                pBase2.x, pBase2.y
+                tx + ux * dist * spread,
+                ty,
+                b2x + nx * size * height + ux * dist * spread,
+                b2y + ny * size * height + uy * dist * spread,
+                b2x, b2y
             );
 
             ctx.lineTo(x2, y2);
