--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
     </div>
 
     <div id="success-message">
-        <h2>Félicitations, vous connaissez maintenant la date et le lieu du mariage !</h2>
+        <h2>Félicitations !</h2>
         <p>Hâte de vous y voir 🥰</p>
     </div>
 
