--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 
     <div id="success-message">
         <h2>Félicitations !</h2>
-        <p>Vous connaissez maintenant la date et le lieu du mariage 🥰</p>
+        <p>Vous connaissez la date et le lieu du mariage 🥰</p>
     </div>
 
     <script>
