--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
     <div id="success-message">
         <h2>Félicitations !</h2>
         <p>Vous connaissez la date et le lieu du mariage 🥰</p>
-        <a href="https://votre-formulaire-ici.com" class="btn-form">Confirmer ma présence</a>
+        <a href="https://votre-formulaire-ici.com" class="btn-form">Continuer</a>
     </div>
 
     <script>
