--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
             border: 2px dashed #ccc;
             border-radius: 8px;
             z-index: 0;
+            filter: blur(3px); /* Effet de flou pour augmenter la difficulté */
         }
 
         /* L'image de RÉVÉLATION (AVEC DATE) */
