--- a/index.html
+++ b/index.html
@@ -213,7 +213,8 @@
 
     <div id="success-message">
         <h2>Félicitations !</h2>
-        <p> Vous avez maintenant la date du mariage ! Hâte de vous y voir 🥰</p>
+        <p> Vous connaissez la date et le lieu du mariage 🥰</p>
+        <a href="https://formulaire.com" class="btn-form">Confirmer ma présence</a>
     </div>
 
     <script>
