--- a/index.html
+++ b/index.html
@@ -194,6 +194,11 @@
             box-shadow: 0 15px 40px rgba(0,0,0,0.2);
         }
 
+        .btn-form:active {
+            transform: scale(0,95);
+            background-colour:#c99359;
+        }
+
     </style>
 </head>
 <body>
