--- a/index.html
+++ b/index.html
@@ -162,9 +162,8 @@
             cursor: grab;
             z-index: 60;
             filter: drop-shadow(0 4px 6px rgba(0,0,0,0.2));
-            transition: transform 0.1s ease-out;
+            transition: transform 0.1s ease-out, filter 0.3s ease;
             touch-action: none;
-            will-change: transform, left, top;
         }
 
         .piece.dragging {
@@ -176,9 +175,9 @@
         }
 
         .piece.locked {
-            z-index: 40;
+            z-index: 100;
             cursor: default;
-            filter: none;
+            filter: drop-shadow(0 1px 2px rgba(0,0,0,0.1));
             pointer-events: none;
             transition: all 0.3s ease;
             transform: none !important;
